big update rework
